syntax = "proto3";
package ibc.lightclients.parlia.v1;

import "ibc/core/client/v1/client.proto";

message Fraction {
    uint64 numerator = 1;
    uint64 denominator = 2;
}

message ClientState {
    uint64 chain_id = 1;
    bytes ibc_store_address = 2;
    ibc.core.client.v1.Height latest_height = 3;
    Fraction trust_level = 4;
    uint64 trusting_period = 5;
    bool frozen = 6;
}

message ETHHeader {
  bytes header = 1;
}

message Header {
  string identifier = 1;
  repeated ETHHeader headers = 3;
  ibc.core.client.v1.Height trusted_height = 4;
  bytes account_proof = 5;
}

message ConsensusState {
   bytes state_root = 1;
   uint64 timestamp = 2;
   repeated bytes validator_set = 3;
}